update About component

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
     <meta name="twitter:image" content="assets/Images/BimoHenokhBarata.jpg">
 
     <!-- Favicon and Fonts -->
-    <link rel="icon" href="assets/Images/favicon.webp"/>
+    <link rel="icon" href="assets/Images/favicon.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
